--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,16 +1,26 @@
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/card_view"
-    card_view:cardMaxElevation="3dp"
-    card_view:cardCornerRadius="3dp"
-    android:elevation="2dp">
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/movie_poster_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="2dp" />
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_width="wrap_content"
+        android:layout_height="120dp"
+        android:layout_margin="8dp"
+        android:elevation="2dp"
+        android:layout_gravity="center_horizontal"
+        card_view:cardCornerRadius="3dp"
+        card_view:cardMaxElevation="4dp">
 
-</android.support.v7.widget.CardView>
+        <ImageView
+            android:id="@+id/movie_poster_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter" />
+
+    </android.support.v7.widget.CardView>
+    <!--/>-->
+</FrameLayout>
