--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -12,7 +12,7 @@
 
         <!-- Movie Poster -->
         <ImageView
-            android:id="@+id/movie_poster"
+            android:id="@+id/iv_movie_poster"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
