--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -5,7 +5,7 @@
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
+        android:id="@+id/c_view"
         android:layout_width="wrap_content"
         android:layout_height="120dp"
         android:layout_margin="8dp"
@@ -15,7 +15,7 @@
         card_view:cardMaxElevation="4dp">
 
         <ImageView
-            android:id="@+id/movie_poster_list"
+            android:id="@+id/iv_movie_poster"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
