Fix: ScrollView Placement
The ScrollView now has one child.

--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <!-- Poster/Release Date/Title/Rating -->
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,7 +24,7 @@
                 android:adjustViewBounds="true"
                 android:scaleType="fitCenter" />
 
-            <!-- Lieear Layout setup for title/release date/rating -->
+            <!-- Linear Layout setup for title/release date/rating -->
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -105,7 +106,7 @@
             android:layout_height="1dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:background="iv_divider_color" />
+            android:background="@color/iv_divider_color" />
 
         <!-- Movie Synopsis -->
         <TextView
@@ -114,5 +115,5 @@
             android:layout_height="match_parent"
             android:layout_margin="16dp" />
 
-    </ScrollView>
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
