--- a/app/src/main/res/values-v14/styles.xml
+++ b/app/src/main/res/values-v14/styles.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Credit: https://classroom.udacity.com/nanodegrees/nd801/parts/8011345403/modules/432468910275460/lessons/1623168625/concepts/38675585760923 -->
-    <!-- Settings activity theme. -->
-    <style name="SettingsTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
-        <item name="android:actionBarStyle">@style/ActionBar.V14.MovieProjectOne.NoTitle</item>
+
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+
+        <!-- Necessary for the application to not crash -->
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
     </style>
 
     <!-- Settings activity action bar styles -->
-    <style name="ActionBar.V14.MovieProjectOne.NoTitle" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
+    <style name="ActionBar.V14.MovieProjectOne" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
         <item name="android:logo">@android:color/transparent</item>
         <item name="android:background">@color/colorPrimary</item>
         <item name="android:height">56dp</item>
