--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,10 +3,12 @@
     <string-array name="pref_sorting_options">
         <item>@string/pref_sorting_label_popularity</item>
         <item>@string/pref_sorting_label_rating</item>
+        <item>@string/pref_sorting_label_favorites</item>
     </string-array>
 
     <string-array name="pref_sorting_values">
         <item>@string/pref_sorting_popularity</item>
         <item>@string/pref_sorting_rating</item>
+        <item>@string/pref_sorting_favorites</item>
     </string-array>
 </resources>
