--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -3,29 +3,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MovieActivity">
-    <!-- A RecyclerView with some commonly used attributes -->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_movie_fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/tv_no_results"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"/>
+        android:gravity="center" />
 
     <ProgressBar
         android:id="@+id/pb_network"
         android:layout_width="42dp"
         android:layout_height="42dp"
-        android:gravity="center"
-        android:visibility="gone"
-        android:indeterminate="true"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"/>
+        android:gravity="center"
+        android:indeterminate="true"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/b_refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/pb_network"
+        android:layout_gravity="center"
+        android:text="@string/b_refresh"
+        android:layout_margin="16dp"
+        android:gravity="center" />
 
 </RelativeLayout>
