--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -31,7 +31,7 @@
         android:id="@+id/b_refresh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/pb_network"
+        android:layout_below="@+id/tv_no_results"
         android:layout_gravity="center"
         android:text="@string/btn_refresh"
         android:layout_margin="16dp"
