--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -4,10 +4,16 @@
     android:layout_height="match_parent">
 
     <ListPreference
-        android:title="@string/pref_sorting_label"
-        android:key="@string/pref_sorting_key"
         android:defaultValue="@string/pref_sorting_popularity"
+        android:entries="@array/pref_sorting_options"
         android:entryValues="@array/pref_sorting_values"
-        android:entries="@array/pref_sorting_options" />
+        android:key="@string/pref_sorting_key"
+        android:title="@string/pref_sorting_label" />
 
+    <CheckBoxPreference
+        android:defaultValue="@bool/show_notification_by_default"
+        android:key="@string/pref_enable_notifications_key"
+        android:summaryOff="@string/pref_enable_notifications_false"
+        android:summaryOn="@string/pref_enable_notifications_true"
+        android:title="@string/pref_enable_notifications_label" />
 </PreferenceScreen>
