--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -15,7 +15,7 @@
         card_view:cardMaxElevation="4dp">
 
         <ImageView
-            android:id="@+id/iv_movie_poster"
+            android:id="@+id/ivMoviePoster"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
