--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -20,8 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            tools:src="@android:drawable/alert_dark_frame"/>
+            android:scaleType="fitCenter"/>
 
     </android.support.v7.widget.CardView>
     <!--/>-->
